[project]
name = "kiteconnect-async"
version = "0.1.15"
description = ""
authors = [
    {name = "RecursedApe",email = "recursedape@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)"
]

[tool.poetry]
packages = [{include = "kiteconnect_async", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
